--- a/typewriter_animation.css
+++ b/typewriter_animation.css
@@ -23,6 +23,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-attachment: transparent;
+    background-color: transparent;
     border-left: 3px solid black;
 }
